# fwe

./: .gitignore  LICENSE  README.md  free_water_elimination.py  pyproject.toml
.github/workflows/: build.yaml  test.yaml
fwe/: __init__.py  beltrami.py  fwe.py
src/fwe/: fwe.py
